# seed-ops-lite

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENT_EXECUTION_BENCHMARK.md  AGENT_EXECUTION_RECOVERY.md  AGENT_FRAMEWORK.md  AI_PLATFORM_LOAD_TEST_REPORT.md  API_REFERENCE.md  ARCHITECTURE_EVOLUTION.md  ARCHITECTURE_INDEX.md  BUILD_MANIFEST.md  BUILD_VERIFICATION.md  BUILTIN_TOOLS.md  CHANGELOG.md  CHECKSUMS.sha256  CONFIGURATION_REFERENCE.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile  ENTERPRISE_FOUNDATION.md  GENERAL_AVAILABILITY_REPORT.md  HITL_APPROVAL_ENGINE.md  HITL_VERIFICATION.md  INTEGRATION_PROMPT.md  LICENSE  LITE_V1_RELEASE_AUDIT.md  MODULE_INDEX.md  MULTI_AGENT_SHARED_MEMORY.md  MULTI_AGENT_VERIFICATION.md  OPERATIONS_CHECKLIST.md  OPERATIONS_GUIDE.md  POSTGRES_DDL_IMPORT.md  RC1_BUILD_MANIFEST.md  RC1_CERTIFICATION_REPORT.md  RC1_CHECKSUMS.sha256  RC1_RELEASE_NOTES.md  RC1_VERSION_MANIFEST.md  README.md  RELEASE_BRANCH_CHECKLIST.md  (+29 more)
.github/workflows/: docker.yml
.skills/repository_guardian/: README.md  SKILL.md  config.yaml  examples.md
alembic/: env.py
alembic/versions/: 10e6f9024936_add_description_and_status_to_projects.py  13389056f9ba_add_base_platform_tables.py  2c95953f5096_add_optimistic_locking_and_indexes.py  a1b2c3d4e5f6_add_llm_telemetry_table.py  b2c3d4e5f6a7_add_column_business_table.py
app/: main.py
app/api/: deps.py  middleware.py  router.py
app/binding/: __init__.py  binder.py  exceptions.py  models.py  resolver.py  telemetry.py  validator.py
app/cli/: __init__.py  cli.py  commands.py  exceptions.py  models.py  parser.py  runner.py  seed_workflow.py  telemetry.py
app/config/: __init__.py  exceptions.py  loader.py  manager.py  models.py  profiles.py  telemetry.py  validator.py
app/core/: config.py  exceptions.py  logging.py  redis.py  version.py
app/export/: __init__.py  exceptions.py  exporter.py  formats.py  models.py  telemetry.py  validator.py
app/llm/: __init__.py  config_resolver.py  exceptions.py  gateway.py  model_manager.py  models.py  provider.py  retry.py  telemetry_persistence.py  token_accounting.py  validation.py
app/observability/: __init__.py  aggregator.py  collector.py  exceptions.py  metrics.py  models.py  reporter.py  telemetry.py
app/platform/: __init__.py  container.py
app/prompts/: __init__.py  (+8 more)
docker/: Dockerfile  Dockerfile.rocm
docs/: GIT_WORKFLOW.md  README.md  simplified_dataset_generation.md
frontend/: README.md  package-lock.json  package.json  vite.config.ts
ignorefile/: audit_results.json  scratch_audit.py
scripts/: bench_providers.py  demo_wizard.py  download_model.py  e2e_amd_check.py
tests/: conftest.py  test_agent_benchmark.py  test_agent_chaos.py  test_agent_collaboration_memory.py  test_agent_collaboration_scheduler.py  test_agent_communication.py  test_agent_delegation.py  test_agent_execution.py  test_agent_framework.py  test_agent_integration.py  test_agent_memory.py  test_agent_orchestrator.py  test_agent_planning.py  test_agent_recovery.py  test_agent_scheduler.py  test_agent_tools.py  test_allocator.py  test_amd_stack.py  test_batch_engine.py  test_binding.py  test_bounded_queue.py  test_builtin_tools.py  test_circuit_breaker.py  test_cli.py  test_cli_dev_startup.py  test_coalescing.py  test_config.py  test_contextual_help.py  test_contracts.py  test_ddl_import.py  test_developer_startup.py  test_e2e_workflow.py  test_enterprise_foundation.py  test_er_diagram.py  test_export.py  test_fk_injector.py  test_guardian_planner.py  test_health.py  test_hitl_benchmark.py  test_hitl_chaos.py  (+55 more)
(+368 files in other folders)
