[project]
name = "seedops-lite"
version = "0.1.0"
description = "Enterprise-grade synthetic relational database generator using a multi-agent architecture"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.3.3",
    "redis[hiredis]>=5.0.6",
    "structlog>=24.2.0",
    "jinja2",
    "sqlalchemy>=2.0.51",
    "alembic>=1.18.5",
    "pyarrow>=24.0.0",
    "google-auth>=2.55.1",
    "requests>=2.34.2",
    "python-multipart>=0.0.32",
]

[project.scripts]
seed = "app.cli.seed_workflow:main"

[dependency-groups]
dev = [
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
    "httpx==0.27.0",
    "black==24.4.2",
    "ruff==0.4.9",
    "mypy==1.10.0",
    "types-redis==4.6.0.20240425"
]

[tool.poetry]
name = "seedops-lite"
version = "0.1.0"
description = "Enterprise-grade synthetic relational database generator using a multi-agent architecture"
authors = ["SeedOps Lite Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.scripts]
seed = "app.cli.seed_workflow:main"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
pydantic = "^2.7.4"
pydantic-settings = "^2.3.3"
redis = {version = "^5.0.6", extras = ["hiredis"]}
structlog = "^24.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
httpx = "^0.27.0"
black = "^24.4.2"
ruff = "^0.4.9"
mypy = "^1.10.0"
types-redis = "^4.6.0.20240425"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "ASYNC", # flake8-async
    "S",   # flake8-bandit
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "T20", # flake8-print
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate (commented out code)
    "PL",  # pylint
    "RUF"  # Ruff-specific rules
]
ignore = [
    "S101", # allow assert in tests (we can override for non-tests if needed, but keeping it simple)
    "D100", # missing docstring in public module
    "D104", # missing docstring in public package
    "D107", # missing docstring in __init__
    "S104", # binding to 0.0.0.0 is required for Docker
    "PLR2004", # magic numbers are fine for status codes and tests
    "N818", # exception names ending in Exception are explicitly requested
    "PLR0913", # allow more than 5 arguments in constructors
    "E501", # allow Black to manage code wrapping, and allow long comments/strings
    "PLR0912", # allow complex branches in parsing engines
    "PLR0915", # allow long statement lists in parsing engines
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "Depends"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
